--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <script language="javascript" type="text/javascript" src="aco.js"></script>
    <meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico" />
-    <title>Workflow optimization simulator</title>
+    <title>Graph optimization simulator</title>
 </head>
 
 <body>
   <div>
     <div style="text-align: center;"">
-      <H1>Workflow optimization simulator</H1>
+      <H1>Graph optimization simulator</H1>
     </div>
     <table style="width: 100%; font-size: 0.8em;" border="1px">
 
