--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
 					        <table id="aco-params">
 					            <tbody>
 					            <tr>
-					                <td colspan="2"><b>Configuration ERP</b></td>
+					                <td colspan="2"><b>Configuration</b></td>
 					            </tr>
 					            	 <tr>
 						                <td>Mode: </td>
@@ -53,7 +53,7 @@
 						    <table id="configMode">
 						    	 <tbody>
 					             <tr>
-						               <td>Numbers of tasks: </td>
+						               <td>Numbers of nodes: </td>
 						                <td>
 						                    <select id="tasksNumber" onchange="changeTaskNumber()">
 						                        <option value="5">5</option>
@@ -234,9 +234,24 @@
 		    </tr>
 		</table>
 	</div>
-	<div>
-		<h3>  Fork the project on <a href="https://github.com/rafaelMurata/rafaelmurata.github.io"> <b>GitHub</b></a> </h3>
-	</div>
+	<table>
+          <tbody>
+          <tr>
+              <td style="width:  700px;">
+              	<h3>  How to usage:  </h3>
+    			<h4> In draw free mode, click on canvas, and choose an algorithm. Press start, and wait pink line. </h4>
+    			<h4> In configuration mode, choose the number of tasks and drag as you want, and choose an algorithm. Press Start and wait for the pink line. </h4>
+    			<h4> Or use the random points button and choose an algorithm. </h4>
+               </td>
+               <td >
+				    <h3>  Support material:  </h3>
+				    <h4><b>Ant colony optimization: </b>  Dorigo, Marco, and Mauro Birattari. "Ant colony optimization." Encyclopedia of machine learning. Springer, Boston, MA, 2011. 36-39. </h4>
+				    <h4><b>The Traveling salesman problem : a guided tour of combinatorial optimization: </b>  Lawer, E. L., et al. "The traveling salesman problem: a guided tour of combinatorial optimization." (1985). </h4>
+				    <h3>  Dowload the project on <a href="https://github.com/rafaelMurata/rafaelmurata.github.io"> <b>GitHub</b></a> </h3>
+              </td>
+          </tr>
+          </tbody>
+     </table>
 
 </body>
 <script type="text/javascript">
